Add lawyers.api.lawyer solution

--- a/compose.yaml
+++ b/compose.yaml
@@ -33,6 +33,17 @@ services:
       - "8081:8080"
     networks:
       - backend
+  
+  laywers.webapi:
+    image: lawyer.api.layers.webapi
+    container_name: lawyer.api.lawyers.webapi
+    build:
+      context: ../lawyer.api.lawyers
+      dockerfile: ./lawyer.api.lawyers.webapi/Dockerfile
+    ports:
+      - "8082:8080"
+    networks:
+      - backend
 
 networks:
   backend:
