--- a/compose.yaml
+++ b/compose.yaml
@@ -55,6 +55,17 @@ services:
       - "8082:8080"
     networks:
       - backend
+  
+  commercialPlans.webapi:
+    image: lawyer.api.commercialplans.webapi
+    container_name: lawyer.api.commercialplans.webapi
+    build:
+      context: ../lawyer.api.commercialplans
+      dockerfile: ./lawyer.api.commercialplans.webapi/Dockerfile
+    ports:
+      - "8083:8080"
+    networks:
+      - backend
 
 networks:
   backend:
